--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -27,7 +27,7 @@
                     android:background="@android:color/transparent"
                     android:text="Play"
                     android:id="@+id/buttonPLAY" android:layout_row="0" android:layout_column="0"
-                    android:onClick="buttonPressed"
+                    android:onClick="startBoardActivity"
                     android:textSize="25dip"
                     android:fontFamily="times new roman"
                     android:textColor="#000000"
