--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,92 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@drawable/main_background"
-        >
-
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/main_background">
 
 
     <TableLayout
-            android:id="@+id/grid"
-            android:layout_width="150dip"
+        android:id="@+id/grid"
+        android:layout_width="150dip"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:stretchColumns="*"
+        android:paddingTop="70dip">
+
+        <TableRow
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:stretchColumns="*"
-            android:paddingTop="70dip"
+
             >
-        <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
 
-                >
             <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:text="Play"
-                    android:id="@+id/buttonPLAY" android:layout_row="0" android:layout_column="0"
-                    android:onClick="buttonPressed"
-                    android:textSize="25dip"
-                    android:fontFamily="times new roman"
-                    android:textColor="#000000"
-                    />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:text="Play"
+                android:id="@+id/buttonPLAY"
+                android:layout_row="0"
+                android:layout_column="0"
+                android:onClick="buttonPressed"
+                android:textSize="25dip"
+                android:fontFamily="times new roman"
+                android:textColor="#000000" />
         </TableRow>
 
         <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
 
-                >
+            >
+
             <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:text="Puzzles"
-                    android:id="@+id/buttonPuzzles" android:layout_row="0" android:layout_column="0"
-                    android:onClick="buttonPressed"
-                    android:textSize="25dip"
-                    android:fontFamily="times new roman"
-                    android:textColor="#000000"
-                    />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:text="Puzzles"
+                android:id="@+id/buttonPuzzles"
+                android:layout_row="0"
+                android:layout_column="0"
+                android:onClick="buttonPressed"
+                android:textSize="25dip"
+                android:fontFamily="times new roman"
+                android:textColor="#000000" />
         </TableRow>
 
         <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
 
-                >
+            >
+
             <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:text="Options"
-                    android:id="@+id/buttonOptions" android:layout_row="0" android:layout_column="0"
-                    android:onClick="buttonPressed"
-                    android:textSize="25dip"
-                    android:fontFamily="times new roman"
-                    android:textColor="#000000"
-                    />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:text="Options"
+                android:id="@+id/buttonOptions"
+                android:layout_row="0"
+                android:layout_column="0"
+                android:onClick="buttonPressed"
+                android:textSize="25dip"
+                android:fontFamily="times new roman"
+                android:textColor="#000000" />
         </TableRow>
 
         <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
-            <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:text="About"
-                    android:id="@+id/buttonAbout" android:layout_row="0" android:layout_column="0"
-                    android:onClick="startAboutActivity"
-                    android:textSize="25dip"
-                    android:fontFamily="times new roman"
-                    android:textColor="#000000"
-                    />
-        </TableRow>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:text="About"
+                android:id="@+id/buttonAbout"
+                android:layout_row="0"
+                android:layout_column="0"
+                android:onClick="startAboutActivity"
+                android:textSize="25dip"
+                android:fontFamily="times new roman"
+                android:textColor="#000000" />
+        </TableRow>
 
 
     </TableLayout>
