--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -42,10 +42,10 @@
             <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
+
                     android:text="Puzzles"
                     android:id="@+id/buttonPuzzles" android:layout_row="0" android:layout_column="0"
-                    android:onClick="buttonPressed"
+                    android:onClick="startPuzzleListActivity"
                     android:textSize="25dip"
                     android:fontFamily="times new roman"
                     android:textColor="#000000"
