--- a/res/layout/boardview.xml
+++ b/res/layout/boardview.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:background="@drawable/background_image_1"
+              >
 
     <com.example.RushHourApp.DrawView
             android:id="@+id/drawview"
@@ -18,8 +21,7 @@
         android:layout_height="wrap_content">
             <Button
                     android:id="@+id/prevPuzzle"
-                    style="@style/btnStyleGenoa"
-                    android:text="Previous Puzzle"
+                    android:background="@drawable/previous_button"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:onClick="onPrevClick"
@@ -27,8 +29,7 @@
 
             <Button
                     android:id="@+id/nextPuzzle"
-                    style="@style/btnStyleGenoa"
-                    android:text="Next Puzzle"
+                    android:background="@drawable/next_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
@@ -49,6 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="100dip"
+                android:layout_gravity="center"
                 android:textSize="30dip"
                 android:textColor="#11F079"
                 />
