--- a/res/layout/boardview.xml
+++ b/res/layout/boardview.xml
@@ -22,16 +22,16 @@
             <Button
                     android:id="@+id/prevPuzzle"
                     android:background="@drawable/previous_button"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dip"
+                    android:layout_height="50dip"
                     android:onClick="onPrevClick"
                 />
 
             <Button
                     android:id="@+id/nextPuzzle"
                     android:background="@drawable/next_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="150dip"
+                    android:layout_height="50dip"
                     android:layout_alignParentRight="true"
                     android:onClick="onNextClick"
                 />
@@ -49,7 +49,7 @@
                 android:id="@+id/boardName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="100dip"
+                android:layout_marginTop="50dip"
                 android:layout_gravity="center"
                 android:textSize="30dip"
                 android:textColor="#11F079"
